[stdevMac] refs #2031 Get an swagger spec at 40% whitout security This change is working in issue 2031
